--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
-body {
+.login {
   background-color: #fafafa;
   display: flex;
   justify-content: center;
