--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -15,22 +15,42 @@
     border: 1px solid lightgray;
     background-color: white;
     .signup-title {
-      margin: 55px 0 20px 0;
+      margin: 55px 0 30px 0;
       font-size: 40px;
       font-family: "Lobster", cursive;
     }
-    .signup-message {
-      margin: 25px auto;
-      width: 270px;
-      line-height: 22px;
-      font-size: 17px;
+    .signup-profileImg {
+      margin: 0 auto;
+      width: 57px;
+      height: 57px;
+      border: 1px solid #dbdbdb;
+      border-radius: 100%;
+    }
+    .signup-profileImg-label {
+      margin: 5px 0 20px 0;
       font-weight: bold;
-      color: #8e8e8e;
+      font-size: 13px;
+      color: #0095f6;
+      display: inline-block;
+      line-height: normal;
+      vertical-align: middle;
+      cursor: pointer;
+    }
+    .form-signup input[type="file"] {
+      display: none;
+      // position: absolute;
+      // width: 1px;
+      // height: 1px;
+      // // padding: 0;
+      // // margin: -1px;
+      // overflow: hidden;
+      // clip: rect(0, 0, 0, 0);
+      // border: 0;
     }
     .signup-email,
     .signup-pw,
     .signup-id,
-    .signup-username {
+    .signup-name {
       display: block;
       width: 270px;
       margin: 10px auto;
@@ -43,7 +63,7 @@
     .signup-email:focus,
     .signup-pw:focus,
     .signup-id:focus,
-    .signup-userName:focus {
+    .signup-name:focus {
       outline: none;
     }
     .signup-btn {
